# InfotecsEvents

./: README.md  main
Infotecs_TraineeC++_2024/: CMakeLists.txt  main  main.cpp
Infotecs_TraineeC++_2024/common/: CMakeLists.txt  handler.h  network.h  utils.cpp  utils.h
Infotecs_TraineeC++_2024/output_server/: CMakeLists.txt  main.cpp  server.h
Infotecs_TraineeC++_2024/program_1/: CMakeCache.txt  CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  InputHandler.cpp  InputHandler.h  Makefile  NetworkClient.cpp  NetworkClient.h  Worker.cpp  Worker.h  cmake_install.cmake  main  main.cpp
Infotecs_TraineeC++_2024/program_1/common/: Makefile  cmake_install.cmake
Infotecs_TraineeC++_2024/program_1/program_1/: Makefile  cmake_install.cmake
Infotecs_TraineeC++_2024/program_1/program_2/: Makefile  cmake_install.cmake
Infotecs_TraineeC++_2024/program_2/: CMakeLists.txt  DataHandler.cpp  DataHandler.h  Makefile  NetworkServer.cpp  NetworkServer.h  main.cpp
Infotecs_TraineeC++_2024/programm_1/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  InputHandler.cpp  InputHandler.h  NetworkClient.cpp  NetworkClient.h  ThreadsExecutor.cpp  ThreadsExecutor.h  Worker.cpp  Worker.h  main.cpp
Infotecs_TraineeC++_2024/programm_2/: CMakeLists.txt  DataHandler.cpp  DataHandler.h  NetworkServer.cpp  NetworkServer.h  main.cpp
Infotecs_TraineeC++_2024/string_server/: CMakeLists.txt  main  main.cpp  server.cpp  server.h
